fix homepage horizontal scroll bug

--- a/frontend/src/components/HomeBackground/HomeBackground.scss
+++ b/frontend/src/components/HomeBackground/HomeBackground.scss
@@ -17,7 +17,7 @@
     }
 
     &.stars {
-      height: $viewHeightRef;
+      height: 1.5 * $viewHeightRef;
       top: 100vh;
       background: black url($CDN_URL + "/images/homepage/stars.png") repeat-y
         center center;
