--- a/frontend/src/components/HomepageContentBackground/HomepageContentBackground.scss
+++ b/frontend/src/components/HomepageContentBackground/HomepageContentBackground.scss
@@ -5,6 +5,7 @@
   --edge-offset: 0;
   --stone-top: -21%;
   --stone-bottom: -16%;
+  top: 7.5em;
 
   .bg {
     &.statue {
